# confini

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  codecov.yml
confinilib/: CMakeLists.txt
confinilib/src/: Doxyfile.in  confini.cpp  confini.pc.in
confinilib/test/: DuplicateKey.ini  InvalidLine.ini  changetest.cpp  confinitestfiles.h.in  readtest.cpp  versiontest.cpp  writetest.cpp
include/: confini.h
src/: confini.cpp  confiniversion.h.in
test/: DuplicateSection.ini  InvalidSection.ini  readtest.cpp  test.ini
